--- a/example/android/chetbot-library/build.gradle
+++ b/example/android/chetbot-library/build.gradle
@@ -1,15 +1,14 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
     buildToolsVersion '21.1.2'
 
     defaultConfig {
-        applicationId "com.chetbox.chetbot.stopwatch"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -22,5 +21,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile project(path: ':chetbot-library') // TODO:  use dependency as JAR
 }
