--- a/example/android/chetbot-library/build.gradle
+++ b/example/android/chetbot-library/build.gradle
@@ -16,9 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.nanohttpd:nanohttpd:2.1.1'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
