use guava for collections

--- a/example/android/chetbot-library/build.gradle
+++ b/example/android/chetbot-library/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.nanohttpd:nanohttpd:2.1.1'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.guava:guava-collections:r03'
 }
