--- a/example/android/chetbot-library/build.gradle
+++ b/example/android/chetbot-library/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.nanohttpd:nanohttpd:2.1.1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.google.guava:guava-collections:r03'
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
 }
