--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chetbox/chetbot#readme",
   "dependencies": {
-    "ws": "^0.7.2"
+    "express": "^4.12.4",
+    "express-ws": "^0.2.6"
   }
 }
