--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/chetbox/chetbot#readme",
   "dependencies": {
+    "config": "^1.14.0",
     "express": "^4.12.4",
+    "express-session": "^1.11.3",
     "express-ws": "^0.2.6",
     "mu2express": "0.0.1",
+    "passport": "^0.2.2",
+    "passport-github2": "^0.1.9",
     "uuid": "^2.0.1"
   }
 }
