--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body": "^5.1.0",
     "config": "^1.14.0",
+    "connect-flash": "^0.1.1",
     "dynasty": "^0.1.4",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
