--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,12 @@
     "connect-flash": "^0.1.1",
     "dynasty": "^0.1.4",
     "express": "^4.12.4",
+    "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
     "express-ws": "^0.2.6",
-    "mu2express": "0.0.1",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
-    "underscore": "^1.8.3",
-    "uuid": "^2.0.1"
+    "shortid": "^2.2.2",
+    "underscore": "^1.8.3"
   }
 }
