migrate from body to body-parser

--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/chetbox/chetbot#readme",
   "dependencies": {
     "aws-sdk": "^2.1.37",
-    "body": "^5.1.0",
+    "body-parser": "^1.13.2",
     "config": "^1.14.0",
     "connect-flash": "^0.1.1",
     "dynasty": "^0.1.4",
