--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
     "request-promise": "^0.4.2",
+    "shelljs": "^0.5.1",
     "shortid": "^2.2.2",
     "underscore": "^1.8.3"
   }
