--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "express-ws": "^0.2.6",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
-    "request-promise": "^0.4.2",
+    "request": "^2.58.0",
     "shelljs": "^0.5.1",
     "shortid": "^2.2.2",
     "underscore": "^1.8.3"
