--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,7 +7,7 @@ VOLUME /opt/chetbot-server/config
 WORKDIR /opt/chetbot-server
 
 RUN apt-get update
-RUN apt-get -y install zip unzip
+RUN apt-get -y install zip unzip default-jre-headless xmlstarlet
 RUN wget https://xml-apk-parser.googlecode.com/files/APKParser.jar -o android/APKParser.jar
 RUN npm update
 
