fix download location of APKParser.jar

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /opt/chetbot-server
 
 RUN apt-get update
 RUN apt-get -y install zip unzip default-jre-headless xmlstarlet
-RUN wget https://xml-apk-parser.googlecode.com/files/APKParser.jar -o android/APKParser.jar
+RUN wget https://xml-apk-parser.googlecode.com/files/APKParser.jar -o android/deps/APKParser.jar
 RUN npm update
 
 ENV PORT 8000
