make sure server/android/deps exists when building server

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -18,6 +18,7 @@ WORKDIR /opt/chetbot-server
 VOLUME /opt/chetbot-server/config
 
 # Get project dependencies
+RUN mkdir -p android/deps
 RUN wget -q https://xml-apk-parser.googlecode.com/files/APKParser.jar -O android/deps/APKParser.jar
 RUN wget -q https://bitbucket.org/JesusFreke/smali/downloads/smali-2.0.6.jar -O android/deps/smali.jar
 RUN wget -q https://bitbucket.org/JesusFreke/smali/downloads/baksmali-2.0.6.jar -O android/deps/baksmali.jar
