--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "postinstall": "node node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -33,5 +34,8 @@
     "shelljs": "^0.5.1",
     "shortid": "^2.2.2",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "bower": "^1.4.1"
   }
 }
