--- a/server/bower.json
+++ b/server/bower.json
@@ -13,5 +13,6 @@
     "jquery": "~2.1.4",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3"
   }
 }
