fixed extracting icons from APKs

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/chetbox/chetbot#readme",
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "aws-sdk": "^2.1.37",
     "bluebird": "^2.9.32",
     "body-parser": "^1.13.2",
