--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
-    "postinstall": "node node_modules/bower/bin/bower install"
+    "test": "node_modules/mocha/bin/mocha --recursive",
+    "postinstall": "node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "bower": "^1.4.1"
+    "bower": "^1.4.1",
+    "mocha": "^2.2.5"
   }
 }
