--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.google.guava:guava-collections:r03'
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
+    compile 'rhino:js:1.7R2'
 }
