--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -25,5 +25,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile project(path: ':chetbot-library') // TODO:  use dependency as JAR
+    compile project(path: ':chetbot-library')
 }
