--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile 'com.google.guava:guava-collections:r03'
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
     compile 'rhino:js:1.7R2'
+    compile 'com.android.support:multidex:1.0.1'
 }
