--- a/android/test/app/src/main/AndroidManifest.xml
+++ b/android/test/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name="com.chetbox.chetbot.android.ChetbotApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
