--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -20,8 +20,9 @@ VOLUME /opt/chetbot-server/config
 # Get project dependencies
 RUN mkdir -p apps/android/deps
 RUN wget -q https://xml-apk-parser.googlecode.com/files/APKParser.jar -O apps/android/deps/APKParser.jar
-RUN wget -q --keep-session-cookies https://bitbucket.org/JesusFreke/smali/downloads/smali-2.0.6.jar -O apps/android/deps/smali.jar
-RUN wget -q --keep-session-cookies https://bitbucket.org/JesusFreke/smali/downloads/baksmali-2.0.6.jar -O apps/android/deps/baksmali.jar
+RUN wget -q --keep-session-cookies https://bitbucket.org/JesusFreke/smali/downloads/smali-2.0.6.jar -O apps/android/deps/smali-2.0.6.jar
+RUN wget -q --keep-session-cookies https://bitbucket.org/JesusFreke/smali/downloads/baksmali-2.0.6.jar -O apps/android/deps/baksmali-2.0.6.jar
+RUN wget -q --keep-session-cookies https://bitbucket.org/iBotPeaches/apktool/downloads/apktool_2.0.1.jar -O apktool_2.0.1.jar
 
 # Generate Android keystore
 RUN mkdir -p /root/.android
