--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,8 @@
     "request": "^2.58.0",
     "shelljs": "^0.5.1",
     "shortid": "^2.2.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.10"
   },
   "devDependencies": {
     "bower": "^1.4.1",
