--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.1.37",
     "bluebird": "^2.9.32",
     "body-parser": "^1.13.2",
+    "bower": "^1.4.1",
     "config": "^1.14.0",
     "connect-flash": "^0.1.1",
     "dynasty": "0.1.4",
@@ -29,14 +30,15 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
     "express-ws": "^0.2.6",
+    "fs-walk": "0.0.1",
+    "js-yaml": "^3.4.2",
+    "mocha": "^2.2.5",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
     "request": "^2.58.0",
     "shelljs": "^0.5.1",
     "shortid": "^2.2.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.10",
-    "bower": "^1.4.1",
-    "mocha": "^2.2.5"
+    "xml2js": "^0.4.10"
   }
 }
