--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -23,8 +23,8 @@ allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
 
     defaultConfig {
         minSdkVersion 19
@@ -50,4 +50,5 @@ dependencies {
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
     compile 'rhino:js:1.7R2'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
