--- a/android/test/app/src/main/AndroidManifest.xml
+++ b/android/test/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chetbox.chetbot.stopwatch" >
+    package="com.chetbox.chetbot.test" >
 
     <!-- required by ChetBot -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,20 +9,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:name="com.chetbox.chetbot.android.ChetbotApplication"
-        android:label="@string/app_name"
+        android:label="@string/stopwatch"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".StopwatchActivity"
+            android:name="com.chetbox.chetbot.test.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".TextFieldsActivity"
-            android:label="@string/app_name" >
         </activity>
     </application>
 
