--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'rhino:js:1.7R2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
 }
