--- a/android/test/app/build.gradle
+++ b/android/test/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'com.squareup.okhttp:mockwebserver:2.5.0'
 }
