--- a/server/bower.json
+++ b/server/bower.json
@@ -14,6 +14,9 @@
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.2",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
-    "paper-fab": "PolymerElements/paper-fab#~1.0.3"
+    "paper-fab": "PolymerElements/paper-fab#~1.0.3",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
+    "paper-input": "PolymerElements/paper-input#~1.0.15",
+    "paper-button": "PolymerElements/paper-button#~1.0.8"
   }
 }
