--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "fs-walk": "0.0.1",
     "js-yaml": "^3.4.2",
     "mocha": "^2.2.5",
+    "moment": "^2.10.6",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
     "request": "^2.58.0",
