--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "express": "^4.12.4",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
-    "express-ws": "^0.2.6",
+    "express-ws": "1.0.0-rc.2",
     "fs-walk": "0.0.1",
     "js-yaml": "^3.4.2",
     "mocha": "^2.2.5",
