--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "bower": "^1.4.1",
     "config": "^1.14.0",
     "connect-flash": "^0.1.1",
+    "debug": "^2.2.0",
     "dynasty": "0.1.4",
     "express": "^4.12.4",
     "express-handlebars": "^2.0.1",
