--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha --recursive",
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --recursive",
     "postinstall": "node_modules/bower/bin/bower --allow-root install"
   },
   "repository": {
@@ -26,7 +26,7 @@
     "config": "^1.14.0",
     "connect-flash": "^0.1.1",
     "debug": "^2.2.0",
-    "dynasty": "0.1.4",
+    "dynasty": "0.2.4",
     "express": "^4.12.4",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
