--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.11.3",
     "express-ws": "1.0.0-rc.2",
     "fs-walk": "0.0.1",
+    "handlebars": "^4.0.5",
     "js-yaml": "^3.4.2",
     "mocha": "^2.3.4",
     "moment": "^2.10.6",
