--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --recursive",
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register --recursive",
     "postinstall": "node_modules/bower/bin/bower --allow-root install"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "bluebird": "^2.9.32",
     "body-parser": "^1.13.2",
     "bower": "^1.4.1",
+    "coffee-script": "^1.10.0",
     "config": "^1.14.0",
     "connect-flash": "^0.1.1",
     "debug": "^2.2.0",
