--- a/server/bower.json
+++ b/server/bower.json
@@ -18,6 +18,7 @@
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
     "paper-input": "PolymerElements/paper-input#~1.0.15",
     "paper-button": "PolymerElements/paper-button#~1.0.8",
-    "peity": "~3.2.0"
+    "peity": "~3.2.0",
+    "ifvisible.js": "~1.0.6"
   }
 }
