--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.10.6",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
+    "passport-http-bearer": "^1.0.1",
     "request": "^2.58.0",
     "shelljs": "^0.5.1",
     "shortid": "^2.2.2",
