--- a/server/bower.json
+++ b/server/bower.json
@@ -17,6 +17,7 @@
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
     "paper-input": "PolymerElements/paper-input#~1.0.15",
-    "paper-button": "PolymerElements/paper-button#~1.0.8"
+    "paper-button": "PolymerElements/paper-button#~1.0.8",
+    "konami-js": "~1.4.2"
   }
 }
