--- a/server/bower.json
+++ b/server/bower.json
@@ -19,6 +19,7 @@
     "paper-input": "PolymerElements/paper-input#~1.0.15",
     "paper-button": "PolymerElements/paper-button#~1.0.8",
     "peity": "~3.2.0",
-    "ifvisible.js": "~1.0.6"
+    "ifvisible.js": "~1.0.6",
+    "konami-js": "~1.4.2"
   }
 }
