--- a/server/bower.json
+++ b/server/bower.json
@@ -20,6 +20,7 @@
     "paper-button": "PolymerElements/paper-button#~1.0.8",
     "peity": "~3.2.0",
     "ifvisible.js": "~1.0.6",
-    "konami-js": "~1.4.2"
+    "konami-js": "~1.4.2",
+    "paper-spinner": "PolymerElements/paper-spinner#~1.1.0"
   }
 }
