--- a/server/bower.json
+++ b/server/bower.json
@@ -21,6 +21,7 @@
     "peity": "~3.2.0",
     "ifvisible.js": "~1.0.6",
     "konami-js": "~1.4.2",
-    "paper-spinner": "PolymerElements/paper-spinner#~1.1.0"
+    "paper-spinner": "PolymerElements/paper-spinner#~1.1.0",
+    "underscore": "~1.8.3"
   }
 }
