--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "bluebird": "^3.1.1",
     "body-parser": "^1.13.2",
     "bower": "1.7.x",
+    "bull": "^0.7.0",
     "coffee-script": "^1.10.0",
     "config": "^1.14.0",
     "connect-flash": "^0.1.1",
