--- a/server/bower.json
+++ b/server/bower.json
@@ -22,6 +22,8 @@
     "ifvisible.js": "~1.0.6",
     "konami-js": "~1.4.2",
     "paper-spinner": "PolymerElements/paper-spinner#~1.1.0",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "paper-radio-group": "PolymerElements/paper-radio-group#~1.0.9",
+    "paper-radio-button": "PolymerElements/paper-radio-button#~1.1.1"
   }
 }
