--- a/server/bower.json
+++ b/server/bower.json
@@ -24,6 +24,7 @@
     "paper-spinner": "PolymerElements/paper-spinner#~1.1.0",
     "underscore": "~1.8.3",
     "paper-radio-group": "PolymerElements/paper-radio-group#~1.0.9",
-    "paper-radio-button": "PolymerElements/paper-radio-button#~1.1.1"
+    "paper-radio-button": "PolymerElements/paper-radio-button#~1.1.1",
+    "jquery-ui": "^1.11.4"
   }
 }
