--- a/server/bower.json
+++ b/server/bower.json
@@ -25,6 +25,7 @@
     "underscore": "~1.8.3",
     "paper-radio-group": "PolymerElements/paper-radio-group#~1.0.9",
     "paper-radio-button": "PolymerElements/paper-radio-button#~1.1.1",
-    "jquery-ui": "^1.11.4"
+    "jquery-ui": "^1.11.4",
+    "js-cookie": "^2.1.0"
   }
 }
