--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "js-yaml": "^3.4.2",
     "mocha": "^2.3.4",
     "moment": "^2.10.6",
+    "moniker": "^0.1.2",
     "passport": "^0.2.2",
     "passport-github2": "^0.1.9",
     "passport-http-bearer": "^1.0.1",
