--- a/android/test/app/build.gradle
+++ b/android/test/app/build.gradle
@@ -29,7 +29,8 @@ configurations.all {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile project(path: ':chetbot-library')
 
     androidTestCompile 'com.android.support.test:runner:0.3'
